--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>RaiseTech（レイズテック） | 最速で稼げるプロになるエンジニアリングスクール</title>
-    <meta name="description" content="最速で「稼げる」エンジニアになるためのエンジニアリングスクール RaiseTech(レイズテック)。徹底した現場主義と挫折しないサポートで、現役講師の授業をオンラインで好きな時に受講できます。?">
+    <meta name="description" content="最速で「稼げる」エンジニアになるためのエンジニアリングスクール RaiseTech(レイズテック)。徹底した現場主義と挫折しないサポートで、現役講師の授業をオンラインで好きな時に受講できます。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- ファビコン -->
     <link rel="icon" type="image/png" href="images/favicon.png">
